# pdfscan

./: BUILD_PDFIUM.md  Cargo.toml  PKGBUILD  PKGBUILD.pdfium  README.md  build-pdfium.sh
src/: extract.rs  gui_main.rs  lib.rs  main.rs  search.rs  stats.rs
src/gui/: analysis_panel.rs  app.rs  mod.rs  pdf_viewer.rs  search_panel.rs  theme.rs  utils.rs
tests/: pdf_loading_tests.rs  search_tests.rs
