[package]
name = "pdfscan"
version = "0.1.0"
edition = "2021"
authors = ["PDF Scanner Developer"]
description = "A tool for extracting text from PDFs and searching within PDF documents"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
pdf-extract = "0.7.0"
walkdir = "2.5.0"
rayon = "1.10.0"
indicatif = "0.17.8"
dirs = "5.0.1"
zip = "0.6.6"
chrono = "0.4.35"
lopdf = "0.31.0"  # Used for basic PDF manipulation
pdfium-render = "0.8.30"  # High-quality PDF rendering library backed by Google's Pdfium

# UI dependencies
eframe = "0.26.2"
egui = "0.26.2"
egui_extras = { version = "0.26.2", features = ["image"] }
image = { version = "0.24.8", features = ["jpeg", "png"] }
rfd = "0.13.0"
thiserror = "1.0.58"
env_logger = "0.11.2"
anyhow = "1.0.80"
egui-modal = "0.3.1"

[features]
default = ["cli", "gui"]
cli = []
gui = []

[lib]
name = "pdfscan"
path = "src/lib.rs"

[[bin]]
name = "pdfscan"
path = "src/main.rs"

[[bin]]
name = "pdfscan-gui"
path = "src/gui_main.rs"
required-features = ["gui"]
